--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="player">
       <!-- Dashboard -->
-      <div class="dashboard" style="background-image: url('/Music-Play/Image-music/A11.jpg'); background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 8px; position: fixed; top: 0; width: 100%; max-width: 480px; z-index: 999;">
+      <div class="dashboard">
         <!-- Header -->
         <header>
           <h4>Now playing:</h4>
